deploy/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attijari-app
  namespace: attijari
spec:
  selector:
    app: attijari-app
  ports:
    - port: 80
      targetPort: 8000
